# ssx

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  id_kabuni  id_kabuni.pub  install.ps1  install.sh  package.json  ssh.ps1  ssh.sh  test_key3  test_key3.pub  tsconfig.json
.claude/: settings.local.json
.gemini/: settings.json
.github/workflows/: release.yml  sshx-release.yml
0e/1d9030468a/: metadata.json
0e/1d9030468a/0/: full.jsonl  metadata.json
0e/1d9030468a/1/: content_hash.txt  full.jsonl  prompt.txt  (+1 more)
2c/693d7d8671/: metadata.json
50/194ffd4d01/: metadata.json
68/2c9e65a886/: metadata.json
6f/bde99c49bd/: metadata.json
78/a18813f369/: metadata.json
94/7fdf2a2ad5/: metadata.json
a1/61f987ea78/: metadata.json
ab/c7c6e996a1/: metadata.json
c5/b37b87a844/: metadata.json
c8/567e368cc9/: metadata.json
npm/: README.md  package.json  tsconfig.json
npm/src/: cli.ts
scripts/: normalize-bun-cjs.cjs  ssh.ps1  ssh.sh
skills/opensrc/: SKILL.md
skills/sshx-manual-qa/: SKILL.md
skills/sshx-release-notes/: SKILL.md
skills/sshx-troubleshoot/: SKILL.md
src/: cli-core.test.ts  cli-core.ts  cli.rs  cli.ts  main.rs  platform.ts  prompt.rs  providers.ts
src/commands/: agent.ts  completions.rs  copy.rs  copy.ts  init.rs  list.rs  list.ts  mod.rs  remove.rs  remove.ts  setup.ts  test.ts
src/platform/: browser.rs  clipboard.rs
src/ssh/: agent.rs  config.test.ts  config.ts  connection.rs  keygen.ts
src/tui/: App.tsx  navigation.test.ts  navigation.ts
sshx/: Cargo.toml  install.sh
sshx/src/: cli.rs  main.rs  providers.rs  ui.rs
(+92 files in other folders)
