[package]
name = "sshx"
version = "0.2.0"
edition = "2021"
description = "Cross-platform SSH key manager for Git providers"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
ctrlc = "3"
dirs = "6"
which = "7"
clap_complete = "4.6.0"
